--- a/static/css/main.css
+++ b/static/css/main.css
@@ -61,6 +61,7 @@ li.bl {
 	width: 632px;;
 	height: 38px;
 	line-height: 38px;
+	float: left;
 	border: dashed 1px #b09fc6;
 	margin: 2px;
 	text-align:center;
