--- a/static/css/main.css
+++ b/static/css/main.css
@@ -58,15 +58,15 @@ li.al {
 }
 li.bl {
 	float: left;
-	width: 632px;;
+	width: 622px;
 	height: 38px;
 	line-height: 38px;
 	float: left;
-	border: dashed 1px #b09fc6;
+	border: dashed 1px #1f1d1d;
 	margin: 2px;
 	text-align:center;
 	border-radius: 6px;
-	text-align: center;
+	text-indent: 8px;
 	background-color:#c3dce0f2;
 }
 li {
